# bls-solidity

./: .gas-snapshot  .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  foundry.toml  remappings.txt
.github/workflows/: test.yml
make_test_signature/: Cargo.toml
make_test_signature/src/: main.rs  signer.rs
script/: DeployEvmnetRegistry.s.sol  DeployQuicknetRegistry.s.sol
snapshots/: BLS.json  BLS2.json  BLS2Test.json  BLSTest.json
src/demos/: DrandQuicknetRegistry.sol  EvmnetRegistry.sol  QuicknetRegistry.sol
src/interfaces/: IScheduledUpgradeable.sol  ISignatureScheme.sol
src/libraries/: BLS.sol  BLS2.sol  ErrorsLib.sol  ModExp.sol  ModExpTest.sol  Precompiles.sol
src/signature-schemes/: BLS12381CompressedSignatureScheme.sol  BLS12381SignatureScheme.sol  BN254SignatureScheme.sol
src/upgradeable/: ScheduledUpgradeable.sol
test/: BLS2Test.sol  BLS2TestFuzz.sol  BLSTest.sol  BLSTestFuzz.sol  Common.sol  DrandQuicknetRegistryTest.t.sol  EvmnetRegistryTest.t.sol  ModExpFuzz.t.sol  QuicknetRegistryTest.t.sol  ScheduledUpgradeableTest.t.sol
test/bls_ffi/: Cargo.toml  Justfile
test/bls_ffi/src/: main.rs
test/data/: Cargo.toml  Justfile  bls2_g1_keccak256.json  bls2_g1_sha256.json  drand_quicknet.json  testcases.json  testcases_bls12.json  testcases_bn254.json
test/data/src/: main.rs
test/signature-schemes/: BLS12381CompressedSignatureScheme.t.sol  BLS12381SignatureScheme.t.sol  BN254SignatureScheme.t.sol
