[workspace]
members = [
    "test/data",
    "test/bls_ffi",
]
resolver = "2"

[workspace.dependencies]
ark-bn254 = "0.5"
ark-bls12-381 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-poly = "0.5"
ark-std = "0.5"
hinting = { git = "https://github.com/randa-mu/bls-solana" }
hash_to_curve = { git = "https://github.com/randa-mu/bls-solana" }
utils = { git = "https://github.com/randa-mu/dcipher", version = "0.1.0", features = ["bn254", "bls12-381"] }

num-bigint = "0.4"
digest = "0.10"
sha2 = "0.10.9"
sha3 = "0.10"

anyhow = "1.0.99"
hex = "0.4.3"
serde_json = "1.0.142"
serde = "1.0.219"

[patch.crates-io]
# Use custom patch to fix arkworks' FieldHasher
ark-ff = { git = 'https://github.com/azixus/algebra', branch = "fix/fieldHasher-v0.5.0"}
