[package]
name = "make_test_signature"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
ark-bn254 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-std = "0.4.0"
rand = "0.8.5"
dcipher-signer = { git = "https://github.com/randa-mu/dcipher", version = "0.1.0" }

digest = "0.10"
sha3 = "0.10"

utils = { git = "https://github.com/randa-mu/dcipher", version = "0.1.0", features = ["bls12-381"] }
