[package]
name = "make_test_signature"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
rand = "0.8.5"
utils = { git = "https://github.com/randa-mu/dcipher", version = "0.1.0", branch = "feat/bls12_381_signer", features = ["bls12-381"] }

digest = "0.10"
sha2 = "0.10.9"
sha3 = "0.10"

hex = "0.4.3"

[patch.crates-io]
# Use custom patch to fix arkworks' FieldHasher
ark-ff = { git = 'https://github.com/azixus/algebra', branch = "fix/fieldHasher"}
