[package]
name = "bls_ffi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
ark-bn254 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
utils = { git = "https://github.com/randa-mu/dcipher", version = "0.1.0", features = ["bn254", "bls12-381"] }

digest = "0.10"
sha2 = "0.10.9"
sha3 = "0.10"

hex = "0.4.3"
serde_json = "1.0.142"
serde = "1.0.219"
ark-std = "0.5.0"
num-bigint = "0.4"

[patch.crates-io]
# Use custom patch to fix arkworks' FieldHasher
ark-ff = { git = 'https://github.com/azixus/algebra', branch = "fix/fieldHasher"}
