[package]
name = "bls_ffi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
ark-bn254.workspace = true
ark-bls12-381.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
utils.workspace = true

digest.workspace = true
sha2.workspace = true
sha3.workspace = true

hex.workspace = true
serde_json.workspace = true
serde.workspace = true
ark-std.workspace = true
num-bigint.workspace = true
